political advisors for romania

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2853,7 +2853,9 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  ROM_petre_p_carp:0 "Petre P. Carp"
  ROM_constantin_dobrogeanu_gherea:0 "Constantin Dobrogeanu-Gherea"
  ROM_iacob_zadik:0 "Iacob Zadik"
-
+ ROM_dimitrie_sturdza:0 "Dimitrie Sturdza"
+ ROM_nicolae_filipescu:0 "Nicolae Filipescu"
+ 
  # RUSSIA
  RUS_mikhail_aleksandrovich_romanov:0 "Mikhail Aleksandrovich Romanov"
  RUS_mikhail_ii:0 "Mikhail II"
