--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5077,6 +5077,13 @@ ROM_influence_of_the_church:0 "Influence of the Church"
 
 ROM_blue_law_overturned:0 "Overturned Blue Law"
 
+#Traits
+
+scholarly_statesman:0 "Scholarly Statesman"
+modernizer:0 "Modernizer"
+diplomatic_stabilizer:0 "Diplomatic stabilizer"
+
+
 
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
