members of parties for advisors

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5082,7 +5082,17 @@ ROM_blue_law_overturned:0 "Overturned Blue Law"
 scholarly_statesman:0 "Scholarly Statesman"
 modernizer:0 "Modernizer"
 diplomatic_stabilizer:0 "Diplomatic stabilizer"
+member_of_PC:0 "Member of PC"
+member_of_PNL:0 "Member of PNL"
+member_of_PSDR:0 "Member of PSDR"
+member_of_PND:0 "member of PND"
 
+ 
+ #custom tooltips
+ member_of_pc:0 "Member of §cPC§!"
+ member_of_pnl:0 "Member of §mPNL§!"
+ member_of_psdr:0 "Member of §rPSDR§!"
+ member_of_pnd:0  "Member of §qPND§!"
 
 
 
