--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,10 +4963,30 @@
 
 
 #####romania
+ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
+ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
+ROM_fixing_the_railways:0 "Fixing the Railways"
+ROM_fixing_the_railways_desc:0 ""
 ROM_develop_the_north:0 "Develop Northern Infrastructure"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
 ROM_prahova_valley:0 "Expand Prahova Valley"
 ROM_prahova_valley_desc:0 "The prahovan valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the prahovan valley for our continued economic development"
+ROM_continue_agrarianism:0 "Continue Agrarianism"
+ROM_continue_agrarianism_desc:0 ""
+ROM_increase_food_exports:0 "Increase Food Exports"
+ROM_increase_food_exports_desc:0 ""
+ROM_develop_western_infrastructure:0 "Develop Western infrastructure"
+ROM_develop_western_infrastructure_desc:0 ""
+ROM_backbone_of_the_romanian_economy:0 "Backbone of the Romanian Economy"
+ROM_backbone_of_the_romanian_economy_desc:0 ""
+ROM_a_modern_economy:0 "A Modern Economy"
+ROM_a_modern_economy_desc:0 ""
+ROM_from_farms_to_factories:0 "From Farms to Factories"
+ROM_from_farms_to_factories_desc:0 ""
+ROM_import_foreign_tools:0 "Import Foreign Tools"
+ROM_import_foreign_tools_desc:0 ""
+ROM_towards_an_industrial_economy:0 "Towards an Industrial Economy"
+ROM_towards_an_industrial_economy_desc:0 ""
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
 ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it."
 ROM_the_burdens_they_endure:0 "The Burdens They Bear"
@@ -4999,8 +5019,6 @@ ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land 
 on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify '§YUnfinished Land Reform§!' by:\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!"
 ROM_king_carols_reign:0 "King Carols Reign"
 ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, had lead us well so far. With his great wisdom, Romania has gone from a rumpt puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
-ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
-ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 #events 
