--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2812,6 +2812,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  
  ROM_idea_german_control:0 "German Economic Hegemony"
  ROM_idea_german_control_desc:0 "According to the Treaty of Bucharest large parts of Romanian industry and resources are under control of German-Austrian corporations. The most important of these is the Oil-lands Leasehold Company Ltd, which operates the Ploiesti oil fields under German ownership. Additionally these corporations own large part of Romanian railway network, effectively dragging down development of Romanian industry.\n\n§RThe Ploiesti Oil fields remain in German control.§!"
+ ROM_railway_improve1:0 "Poor Railway System"
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
