--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4987,6 +4987,10 @@ ROM_import_foreign_tools:0 "Import Foreign Tools"
 ROM_import_foreign_tools_desc:0 ""
 ROM_towards_an_industrial_economy:0 "Towards an Industrial Economy"
 ROM_towards_an_industrial_economy_desc:0 ""
+ROM_romanian_army:0 "The Romanian Army"
+ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
+ROM_his_majestys_influence:0 "His Majesty's Influence"
+ROM_his_majestys_influence_desc:0 ""
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
 ROM_crush_left_wing_protesters_desc:0 "It seems like the radical left cannot accept the will of the people. Their protests are disrupting society and our economy, and we need to put an end to it."
 ROM_the_burdens_they_endure:0 "The Burdens They Bear"
@@ -4995,14 +4999,14 @@ right_wing_populist:0 "Right Wing Populist"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve the Size of the Parliment§!'"
 disable_we_happy_few:0 "§RDIsables§! National Focus: '§YWe Happy Few§!'"
-ROM_romanian_army:0 "The Romanian Army"
-ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
 ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
 ROM_cement_the_churches_status_desc:0 "Romania is a Christian nation first and foremost. With the churches wide spread influence in Romania, working with them is going to be necessary. We should reach out to them and offer them several concessions for their support."
-ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
+ROM_tax_cuts_for_the_poor:0 "Tax Cuts for the Poor"
 ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both the PNL and the PC was to reduce taxes on peasants. With a mandate, its time to fufill this promise and relieve the financial burden of the peasants."
+ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
+ROM_overturn_the_blue_law_desc:0 ""
 pcd_leader:0 "Leader of the PCD"
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
