--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2809,10 +2809,11 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_memories_of_1907_desc:0 "The 1907 peasant revolution was a rude awakening for the elites in Romania - land reform cannot wait. While the governments of the past have indeed began slowly passing land reform legislation, theres still lots to be desired."
  ROM_inexperienced_army_desc:0 "Our army hasn't fought a proper war for almost 40 years. This unproven force cannot be relied upon..."
  ROM_inexperienced_army_tt:0 "§RThe true state of the army will be seen in the Great War!§!"
- 
  ROM_idea_german_control:0 "German Economic Hegemony"
  ROM_idea_german_control_desc:0 "According to the Treaty of Bucharest large parts of Romanian industry and resources are under control of German-Austrian corporations. The most important of these is the Oil-lands Leasehold Company Ltd, which operates the Ploiesti oil fields under German ownership. Additionally these corporations own large part of Romanian railway network, effectively dragging down development of Romanian industry.\n\n§RThe Ploiesti Oil fields remain in German control.§!"
  ROM_railway_improve1:0 "Poor Railway System"
+ ROM_decentralization_idea:0 "Decentralization"
+ ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
