--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5007,10 +5007,10 @@ ROM_promote_romanian_nationalism:0 "Promote Romanian Nationalism"
 ROM_promote_romanian_nationalism_desc:0 "There are millions of Romanians outside of our borders who live in foreign territory that should really belong to us. To prepare to bring them back home, we need to fan the flames of nationalism of the people both inside and outside our borders"
 ROM_cement_the_churches_status:0 "Cement the Churches Status"
 ROM_cement_the_churches_status_desc:0 "Romania is a Christian nation first and foremost. With the churches wide spread influence in Romania, working with them is going to be necessary. We should reach out to them and offer them several concessions for their support."
-ROM_tax_cuts_for_the_poor:0 "Tax Cuts for the Poor"
+ROM_tax_cuts_for_the_poor:0 "Relieve the Peasants Burden"
 ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both the PNL and the PC was to reduce taxes on peasants. With a mandate, its time to fufill this promise and relieve the financial burden of the peasants."
 ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
-ROM_overturn_the_blue_law_desc:0 ""
+ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on sundays, is mostly inspired by Christs teachings. While Christains are free to follow this principle, it shouldn't be forced on everyone."
 pcd_leader:0 "Leader of the PCD"
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
