--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4967,15 +4967,15 @@ ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
 ROM_fixing_the_railways_desc:0 ""
-ROM_develop_the_north:0 "Develop Northern Infrastructure"
+ROM_develop_the_north:0 "The Forgotten Half of the Country"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
-ROM_prahova_valley:0 "Expand Prahova Valley"
+ROM_prahova_valley:0 "Expand the Prahova Valley"
 ROM_prahova_valley_desc:0 "The prahovan valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the prahovan valley for our continued economic development"
 ROM_continue_agrarianism:0 "Continue Agrarianism"
 ROM_continue_agrarianism_desc:0 ""
 ROM_increase_food_exports:0 "Increase Food Exports"
 ROM_increase_food_exports_desc:0 ""
-ROM_develop_western_infrastructure:0 "Develop Western infrastructure"
+ROM_develop_western_infrastructure:0 "New Agricultural Methods"
 ROM_develop_western_infrastructure_desc:0 ""
 ROM_backbone_of_the_romanian_economy:0 "Backbone of the Romanian Economy"
 ROM_backbone_of_the_romanian_economy_desc:0 ""
