--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,7 @@
 
 
 #####romania
+
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
@@ -5092,7 +5093,17 @@ ww1_romania.7.t:0 "The Brătianu Land Reform Bill - The Bill Passes!"
 ww1_romania.7.d:0 "While it was harder then expected, the recent land reform bill proposed to parliment has passed! King Carol as well as the general Romania populace have been worried as of late about the liberals competency in governance, and with this major bill, their fears should be soothed. While there is still progress to do, this bill is a pretty large step foward after a series of very minor reforms in the past year. "
 ww1_romania.7.a:0 "Great news for us!"
 #decision
+king_opinion_set_n.tt:0 "The king's opinion of the current government become §YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
+king_opinion_improve.tt:0 "The king's opinion of the current government will §Gimprove§!"
+king_opinion_worse.tt:0 "The king's opinion of the current government will §Rworsen!"
 
+ ROM_kings_country_category:0 "The Puppet Master"
+ ROM_kings_country_category_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliment in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda.\n\nThe king's opinion can very from the following:\n§RVery negative§!, which gives us:\nDaily Political Power Gain: §R-0.20§!\nStability: §R-12.00%§!\n§ONegative§!, which gives us:\nDaily Political Power Gain: §R-0.10§!\nStability: §R-6.00%§!\n§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!\n§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!\n§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!\n\nThe king's current opinion of the government is [KingsOpinionRomania]"
+ROM_king_view_complete_disapprove:0 "§RVery negative§!, which gives us:\nDaily Political Power Gain: §R-0.20§!\nStability: §R-12.00%§!"
+ROM_king_view_complete_disapprove:0 "§ONegative§!, which gives us:\nDaily Political Power Gain: §R-0.10§!\nStability: §R-6.00%§!"
+ROM_king_view_neutral:0 "§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
+ROM_king_view_approve:0 "§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!"
+ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!"
 #idea
 
 ROM_soldiers_benefits:0 "Soldier Benefits"
