RAJ Army High Command + Propaganda reward UPDATE

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2797,6 +2797,16 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  RAJ_havelock_hudson:0 "Havelock Hudson"
  RAJ_reginald_dyer:0 "Reginald Dyer"
  RAJ_wilfrid_malleson:0 "Wilfrid Malleson"
+ RAJ_malcolm_grover:0 "Malcolm Grover"
+ RAJ_george_barrow:0 "George Barrow"
+ RAJ_john_w_jacob:0 "John W. Jacob"
+ RAJ_lionel_dunsterville:0 "Lionel Dunsterville"
+ RAJ_percy_lake:0 "Percy Lake"
+ RAJ_richard_wapshare:0 "Richard Wapshare"
+
+ RAJ_beauchamp_duff:0 "Beauchamp Duff"
+ RAJ_charles_carmichael_monro:0 "Charles C. Monro"
+ RAJ_henry_seymour_rawlison:0 "Henry S. Rawlison"
 
  RAJ_gilbert_elliot:0 "Gilbert Elliot"
  RAJ_gilbert_elliot_desc:0 "Born into an aristocratic Scottish family on the 9th of July 1845, Gilbert Elliot-Murray-Kynynmound inherited the title of Earl of Minto from his father in 1859. Educated at Eton College and Oxford University, he later pursued a career in politics, serving as Member of Parliament for Haddingtonshire and as Lord in Waiting to Queen Victoria. Serving as Governor-General of Canada from 1898 to 1904, he oversaw the early years of Canadian nationhood and navigated complex issues such as Franco-English relations. Lord Minto's most significant contribution came in his role as colonial administrator, when he was appointed Viceroy of India in 1905. He proved a competent leader on the subcontinent, introducing the §YMorley-Minto reforms§! in 1909 to reconcile nationalist aspirations for greater autonomy with British imperial interests. However, his tenure will shortly come to an end and the Raj will soon have a new Viceroy to lead the subcontinent in these increasingly unstable times."
