--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10666,7 +10666,7 @@ RAJ_government_of_india_act_1912:0 "Reorganization of Bengal"
 RAJ_government_of_india_act_1912_desc:0 ""
 RAJ_government_of_india_act_1915:0 "Consolidate Indian Laws"
 RAJ_government_of_india_act_1915_desc:0 ""
-RAJ_government_of_india_act_1915_reward:0 "Completing this focus will allow us to begin the process of §Yunbloating§! the §Ylegal apparatus§!."
+RAJ_government_of_india_act_1915_reward:0 "\nCompleting this focus will allow us to begin the process of §Yunbloating§! the §Ylegal apparatus§!."
 RAJ_government_of_india_act:0 "Government of India Act"
 RAJ_government_of_india_act_desc:0 ""
 RAJ_mobilize_the_raj:0 "Mobilize the Raj"
@@ -10699,6 +10699,7 @@ RAJ_hardinge_ascension_desc:0 ""
 RAJ_hardinge_ascension_reward:0 "\n§RThis focus will automatically be completed once§! §YCharles Hardinge§! §Rsucceeds§! §YGilbert Elliot§! §Ras Viceroy and Governor-General of India.§!"
 RAJ_indian_diplomacy:0 "Propaganda Campaigns in India"
 RAJ_indian_diplomacy_desc:0 ""
+RAJ_indian_diplomacy_reward:0 "\nCompleting this focus will allow us to conduct several £GFX_decision_icon_small §YPropaganda Campaigns§! to sway Indian public opinion in our favour, which will come to be of great use during §Rwartime§!."
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
 RAJ_status_of_the_capital_desc:0 "Calcutta has been the capital of the British Raj since its inception in 1858 following the Sepoy Rebellion, and has served us well ever since. However, Calcutta has its fair share of sanitary issues and calls for a change of capital have grown louder overtime. The question being: where should our administration go?"
