--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10455,7 +10455,7 @@ RAJ_dhamrai_hardinge_school_desc:0 "Our recent successes in the Bengal region ha
 RAJ_ramp_up_sugar_export:0 "Ramp-up Sugar Exports"
 RAJ_ramp_up_sugar_export_desc:0 "While other industries on the subcontinent have been struggling, sugar production, which is mostly exported to London, has been booming. Developing other agricultural sectors might benefit the local population, but it would be very costly with no real benefit to the Crown. We should capitalise even more on our sugar industry and reap the profits as soon as possible."
 RAJ_ramp_up_sugar_export_reward:0 "Modify '§YDe-Industrialisation§!' by\nMax Factories in a State:§G +15.00%§!\nStability:§R -5.00%§!"
-RAJ_generic_deindustrialisation_mes:0 "§RDoing this focus will prevent us from removing the ''De-industrialisation'' National Spirit.§!"
+RAJ_generic_deindustrialisation_mes:0 "\n§RCompleting this focus will prevent us from removing the ''De-industrialisation'' National Spirit.§!"
 
 RAJ_support_local_farmers:0 "Support Local Farmers"
 RAJ_support_local_farmers_desc:0 "The Raj has had its share of famines in its history. They are caused mainly by the general apathy of our administration towards the welfare of the Indian population. By supporting local farmers, we could effectively deal with poverty and alleviate much of the hardship faced by the Indian people, although it would require a much greater amount of resources to develop than other, more profitable crops."
@@ -10471,7 +10471,7 @@ RAJ_import_british_textiles_reward:0 "Modify '§YDe-Industrialisation§!' by\nFa
 
 RAJ_restore_the_cotton_market:0 "Restore the Cotton Market"
 RAJ_restore_the_cotton_market_desc:0 "Raw cotton is currently imported tariff-free from India to British factories. These factories then make textiles from Indian cotton and sell them back to the Indian market. This deal has effectively killed the cotton industry in India and doesn't allow for the development of a large middle class in India. By redirecting funds to open brand new cotton mills, we could very well enable a large number of Indians to lift themselves out of poverty."
-RAJ_restore_the_cotton_market_mes:0 "§GCompleting this focus is necessary to remove the ''De-Industrialisation'' National Spirit.§!"
+RAJ_restore_the_cotton_market_mes:0 "\n§GCompleting this focus is necessary to remove the ''De-Industrialisation'' National Spirit.§!"
 
 RAJ_banaras_hindu_university:0 "Banaras Hindu University"
 RAJ_banaras_hindu_university_desc:0 "The Banaras Hindu University was founded by a number of Indian philanthropists, industrialists and nationalist sympathisers. While their aims often clashed with those of the Raj, the University has lifted thousands out of ignorance and allowed us to find more and more bright-minded individuals among the Indian masses."
