--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,7 +4963,11 @@
 
 
 #####romania
-
+no_happy_few:0 "Didn't accept Carols request to not undo land reform"
+ROM_we_happy_few:0 "We Happy Few"
+ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
+ROM_further_land_reform:0 "Tackling the Land Reform Issue"
+ROM_further_land_reform_desc:0 "The Romanian people expect further land reform from us. We must deliver, and thus will reach out to all sides of the political isle to come up with a moderate bill everyone can agree upon."
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
@@ -5105,7 +5109,7 @@ ROM_king_view_neutral:0 "§YNeutral§!, which gives us:\nDaily Political Power G
 ROM_king_view_approve:0 "§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!"
 ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!"
 #idea
-
+ROM_landlord_association:0 "Landlord Association"
 ROM_soldiers_benefits:0 "Soldier Benefits"
 ROM_left_wing_protesters:0 "Left Wing Protesters"
 ROM_mandated_insurance:0 "Mandated Insurance"
