--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4963,6 +4963,7 @@
 
 
 #####romania
+kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
