king appoints new government

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1425,6 +1425,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ROM_fixing_the_railways.tt:0 "\nWhen this decision is taken:\n§YFor 365 Days:§!\nConsumer Goods Factories factor: §Y10.0%§!\n\n§YEffects when removed:§!\nModify §YPoor Railway System§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nConstruction Speed: §G+5.00%§!"
  ROM_kings_country_category:0 "Kings country"
  ROM_kings_country_category_desc:0 "kings approval of government §Y[?kings_approval_of_government]§!"
+ ROM_king_appoints_new_government:0 "King Appoints New Government"
 
 
  MOL_join_romania:0 "Join Romania"
