--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5036,6 +5036,7 @@ ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, 
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 #events 
+ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "Conservatives are in Power"
 ww1_romania.17.t:0 "PC Majority Elected!"
 ww1_romania.17.d:0 "The recently announced Romanian elections have came to an end. With the votes being counted up, the PC has been announced the winner of the elections, securing a quite large electoral landslide. With this, we will finally have the mandate to pass out agenda. The Romanian people still expect reforms to continue, so we must be careful in our leadership. Failing to govern properly could lead to King Carol outright dismissing us!"
