--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4542,6 +4542,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.19.c:0 "Another more enemy falls."
  ottoman_syria.19.e:0 "People of Egypt have proven their loyalty to the Caliph."
  ottoman_syria.19.f:0 "What lies ahead for Egypt?"
+ ottoman_syria.20.t:0 "Arabist Movement Seeks Independence"
+ ottoman_syria.20.d:0 "What initially argued for equal representation and decentralization, the Arabist movement has started to seek outright independence. Our staggering defeat at the hands of our enemies has pursued the Arabist movement to seek independence as they fear our loss would result in occupation by foreign powers."
+ ottoman_syria.20.a:0 "They're showing their true colors."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
