--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5044,6 +5044,9 @@
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
 
+ TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£political_advisor_cost_texticon  Political Advisor Cost: §G-25%§!\n\n"
+ diplomatic_incident:0 "Diplomatic Incident"
+ TRS_add_5_oppression_justification:0 "Adds §Y5§! Oppression Justification"
  TUR_ottoman_fourth_army:0 "Ottoman Fourth Army"
  TUR_ottoman_fourth_army_desc:0 "Ahmed Cemâl Paşa has been sent to Syria with the intention of centralizing and reforming the region. Apart from this mission, his second role in the region is to organize the 4th Ottoman army and defend the provinces against foreign invasions. As Cemâl Paşa step foot on the territory, it seemed that significant reforms would be required to reorganize the army."
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
