--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1051,10 +1051,10 @@
  TUR_committee_member_6_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 55%§!"
  TUR_committee_member_7_tt:0 "§ROur state will be annexed back into [TUR.GetNameDef] if our surrender progress is more than 50%§!"
  TUR_ottoman_4th_army:0 "Ottoman 4th Army"
- TUR_ottoman_4th_army_desc:0 "When our commandeer Cemal Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
+ TUR_ottoman_4th_army_desc:0 "When our commandeer Cemâl Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
  TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
  TRS_crushed_arab_opposition:0 "Crushed Arab Opposition"
- TRS_crushed_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though Cemal Paşa's reforms in the region is perceived to be unpopular by the local population, we've managed to effectively crush the opposition to our rule."
+ TRS_crushed_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though Cemâl Paşa's reforms in the region is perceived to be unpopular by the local population, we've managed to effectively crush the opposition to our rule."
  TRS_arab_opposition:0 "Arab Opposition"
  TRS_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
  TUR_sectarian_issues:0 "Sectarian Issues"
@@ -1090,6 +1090,8 @@
  TRS_popular_opposition_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
  TRS_reconfiguring_foreign_policy:0 "Reconfiguring Foreign Policy"
  TRS_reconfiguring_foreign_policy_desc:0 "Our recent coup, alongside our internal politics, has left our diplomatic relations in disarray. While dropping out of the war resulted in a base support from our population, it also left us unable to maneuver through the international arena."
+ TRS_cemals_syria:0 "Cemâl's Syria"
+ TRS_cemals_syria_desc:0 "As Ahmed Cemâl Paşa has been assigned with the task of reforming the Syrian lands, he is given a wide range of autonomoy of action. As his decisions will directly shape Syria, it will have profound effects on the state, society and its components."
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
