--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2401,7 +2401,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_15armyxp:0 "£army_experience §Y15§!"
  TUR_decision_cost_15armyxp_blocked:0 "£army_experience §R15§!"
  TUR_minority_decision:0 "Management of Minorities"
- TUR_minority_syria_decision:0 "Management of Minorities"
+ TRS_minority_decision:0 "Management of Minorities"
  TRS_arab_uprising_dummy:0 "Arab Uprising"
  TRS_arab_uprising_dummy_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
  TUR_conscription_in_karak:0 "Conscription in Karak"
@@ -2783,7 +2783,20 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_black_sea_raid_mission_desc:0 "With the recent purchase of the two German ships Goeben and Breslau, some within the government has proposed to strike at the Russians when they're occupied on the Eastern Front. Though there are also those who oppose going to a war. If the influence of he army is high enough, it might take actions against the will of the government."
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  
- TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!"
+ TRS_arabist_movement:0 "Arabist Movement"
+ TRS_arabist_movement_desc:0 "[TRS_arabist_movement_desc]"
+ TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!\n"
+ TRS_arabist_movement_desc1:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful."
+ TRS_arabist_movement_desc2:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful.\n\nIn order to execute actions to surpress Arabists, we need to have a justification.\nCurrent §YOppression Justifications§!: [?TRS_oppression_justification|Y0]"
+ TRS_fabricate_claim:0 "Fabricate Claims"
+ TRS_fabricate_claim_desc:0 ""
+ TRS_bribe_sources:0 "Bribe Sources"
+ TRS_bribe_sources_desc:0 "Arabists themselves has no loyalty to their cause, They're ready to sell information for just a bit of dime."
+ TRS_plant_documents:0 "Plant Documents"
+ TRS_plant_documents_desc:0 "No one can deny what they see with their own eyes, True or false, what lies infront of our eyes provide the best justification."
+ TRS_extract_information:0 "Extract Information"
+ TRS_extract_information_desc:0 "No one withstand pain for so long. If we inflict enough pain, everyone will break at a certain point."
+ TRS_add_1_oppression_justification:0 "Adds §Y1§! Oppression Justification\n"
  TRS_import_weapons:0 "Import Weapons"
  TRS_import_weapons_desc:0 "Our regional command is in a state of dire lack of weaponry. For that reason, we should ask more armament from the central government."
  TRS_import_artillery:0 "Import Artillery"
