--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5046,7 +5046,9 @@
 
  TUR_cemals_personal_territory_tt:0 "Add §YCemâl's Syria§! which grants:\n£political_advisor_cost_texticon  Political Advisor Cost: §G-25%§!\n\n"
  diplomatic_incident:0 "Diplomatic Incident"
- TRS_add_5_oppression_justification:0 "Adds §Y5§! Oppression Justification"
+ TRS_add_1_oppression_justification_for_every_major_at_war:0 "Adds §Y1§! Oppression Justification for every §Ymajor§! we're at §Ywar§! with."
+ TUR_frame_disloyal_elements_tt:0 "This decision will add §Y1§! Oppression Justification.\n\n"
+ TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation"
  TUR_ottoman_fourth_army:0 "Ottoman Fourth Army"
  TUR_ottoman_fourth_army_desc:0 "Ahmed Cemâl Paşa has been sent to Syria with the intention of centralizing and reforming the region. Apart from this mission, his second role in the region is to organize the 4th Ottoman army and defend the provinces against foreign invasions. As Cemâl Paşa step foot on the territory, it seemed that significant reforms would be required to reorganize the army."
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
