--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2789,7 +2789,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_arabist_movement_desc1:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful."
  TRS_arabist_movement_desc2:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful.\n\nIn order to execute actions to surpress Arabists, we need to have a justification.\nCurrent §YOppression Justifications§!: [?TRS_oppression_justification|Y0]"
  TRS_fabricate_claim:0 "Fabricate Claims"
- TRS_fabricate_claim_desc:0 ""
+ TRS_fabricate_claim_desc:0 "Though we have a large autonomy of action in Syria, no authority can act without legitimacy. In order to not lose our already diminishing legitimacy, we'll use justifications to oppress the Arabist movement. Even if there's no real opposition or treason, we'll simply create our own sources to oppress what potential there is."
  TRS_bribe_sources:0 "Bribe Sources"
  TRS_bribe_sources_desc:0 "Arabists themselves has no loyalty to their cause, They're ready to sell information for just a bit of dime."
  TRS_plant_documents:0 "Plant Documents"
